--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PnRaj</title>
+  <title>PNRAJ</title>
   <!--google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
   <!--bootstrap-->
